Fixed table alignment

--- a/src/orgchart.scss
+++ b/src/orgchart.scss
@@ -35,7 +35,7 @@
   /* Override drupal table defaults */
   border-collapse: separate;  
   padding: 48px;
-  margin-bottom: 0;
+  margin: 0 auto;
   width: auto;
 }
 
